[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.0"
bluer = {version ="0.15.3", features = ["full"]}
tokio = "1.22.0"
futures = "0.3.25"
env_logger = "0.10.0"